fix: fix DependencyExport task and add integration tests. (#73)
* fix(DependencyExportTask): multiple fixes

- Extract classes to copy artifacts
- Add POM resolver to copy POM files
- Update DependencyExportTask to copy POMs in addition to jar artifacts

* fix(DependencyExport): add build rock output

* chore: define constant for output directory

* doc: update javadoc comments

* test: add test for DependencyExport task

* chore: use constant for the task name

* feat: use DependencyOptions

* fix: do not set default configurations

* chore: throw IOException from DependencyExport

chore:merge to io exception

* chore: replace action with lambda

* chore: remove unused import in test

* test: implement test for dependency export options

* test: add assertion for plugin download

* test: add options test for DependencyExport

* chore: bump version

* lint: add eol to ArtifactCopy

* lint: use Arrays.asList to create Maven scope set

* lint: use guard condition in a loop

* fix: update code for Java 8 compatibility

* lint: add missing eol